--- a/configserver/src/main/resources/config/activity-service.yml
+++ b/configserver/src/main/resources/config/activity-service.yml
@@ -1,10 +1,10 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/activity-service
+      uri: mongodb://mongodb:27017/activity-service
       database: activity-service
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -16,7 +16,7 @@ kafka:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:8761/eureka
 
 server:
   port: 8082
