--- a/configserver/src/main/resources/config/ai-service.yml
+++ b/configserver/src/main/resources/config/ai-service.yml
@@ -1,10 +1,10 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/ai-service
+      uri: mongodb://mongodb:27017/ai-service
       database: ai-service
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -14,9 +14,10 @@ spring:
         spring.json.value.default.type: com.fitness.aiservice.model.Activity
         spring.json.trusted.packages: "*"
 
-gemini:
+openrouter:
   api:
-    url: ${GEMINI_URL}
+    url: ${OPENROUTER_API_URL}
+    key: ${OPENROUTER_API_KEY}
 
 kafka:
   topic:
@@ -25,7 +26,7 @@ kafka:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:8761/eureka
 
 server:
   port: 8083
