--- a/configserver/src/main/resources/config/gateway-service.yml
+++ b/configserver/src/main/resources/config/gateway-service.yml
@@ -23,11 +23,11 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8181/realms/fitness-tracker-app/protocol/openid-connect/certs
+          jwk-set-uri: http://keycloak:8080/realms/fitness-tracker-app/protocol/openid-connect/certs
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
 
 server:
   port: 8080
