--- a/configserver/src/main/resources/config/user-service.yml
+++ b/configserver/src/main/resources/config/user-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/user-service
-    username: kulvindra
-    password:
+    url: jdbc:postgresql://postgres:5432/user-service
+    username: postgres
+    password: postgres123
   jpa:
     hibernate:
       ddl-auto: update
@@ -10,7 +10,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
 
 server:
   port: 8081
