--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,43 @@ keycloak-data/
 *.swp
 *.swo
 *~
+*.iml
+*.iws
+*.ipr
+.classpath
+.project
+.settings/
+.springBeans
+.sts4-cache
+.factorypath
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
 # Build artifacts
 target/
 build/
 dist/
+dist-ssr/
 node_modules/
+/nbproject/private/
+/nbbuild/
+/nbdist/
+/.nb-gradle/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Maven
+.mvn/wrapper/maven-wrapper.jar
+HELP.md
+
+# Misc
+*.local
